RELENG-1105 Move Whitesource scan to product pipeline